# syn

./: Cargo.toml  Dockerfile
client/: Cargo.toml
client/src/: command.rs  main.rs
server/: Cargo.toml
server/src/: configuration.rs  covid.rs  employees.rs  lib.rs  main.rs  syn.rs
syn/: Cargo.toml
syn/src/: lib.rs
