[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14", features = ["macros", "rt-multi-thread"] }
structopt = "0.3"
reqwest = { version = "0.11", features = ["json","rustls-tls"] }
anyhow = "1.0"
syn = { path = "../syn" }
rand = "0.8"
simplelog = "0.11"
log = "0.4"
chrono = "0.4"
chrono-tz = "0.5"