[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.11"
actix-web = "4.0.0-beta.12"
actix-cors = "0.6.0-beta.4"
actix-rt = "2.5"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
chrono = "0.4"
chrono-tz = "0.5"
serde = { version = "1.0", features = ["derive"] }